# alexandria

./: .gitignore  README.md  pyproject.toml  setup.cfg
alexandria/domain/: interfaces.py  models.py
alexandria/repository/: __init__.py  mongodb.py  repository.py
alexandria/utils/: logger.py
tests/: test_mongodb.py
